[metadata]
name = integreat-cms
version = 2021.11.0-beta
author = Tür an Tür – Digitalfabrik gGmbH
author_email = tech@integreat-app.de
description = Content Management System for the Integreat App
url = https://integreat-app.de/en/
project_urls = 
	Funding=https://integreat-app.de/en/donation/
	Documentation=https://integreat.github.io/integreat-cms/
	Issues=https://github.com/Integreat/integreat-cms/issues
	Source Code=https://github.com/Integreat/integreat-cms
	Release Notes=https://integreat.github.io/integreat-cms/changelog.html
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE.txt
classifiers = 
	Development Status :: 4 - Beta
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Framework :: Django
	Framework :: Django :: 3.2
	Operating System :: POSIX :: Linux
	Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System
	Topic :: Internet :: WWW/HTTP :: WSGI :: Application
	Natural Language :: English
	Natural Language :: German
keywords = 
	integreat
	cms
	django
	e-government
	newcomers
	refugees
	multilingual

[options]
packages = find:
install_requires = 
	aiohttp
	argon2-cffi
	bcrypt
	cffi
	Django>=3.2,<4.0
	django-cacheops
	django-cors-headers
	django-debug-toolbar
	django-linkcheck
	django-mptt
	django-redis
	django-widget-tweaks
	django-webpack-loader
	feedparser
	idna
	lxml
	Pillow
	psycopg2-binary
	python-dateutil
	python-magic
	requests
	rules
	six
	webauthn==0.4.7
	xhtml2pdf
python_requires = ~=3.7
include_package_data = True
scripts = integreat_cms/integreat-cms-cli

[coverage:run]
source = .
branch = true
plugins = django_coverage_plugin

[coverage:report]
show_missing = True
skip_covered = True
exclude_lines = 
	pragma: no cover
	def __repr__
	if self\.debug
	raise AssertionError
	raise NotImplementedError
	if 0:
	if __name__ == .__main__.:
ignore_errors = True

[bumpver]
current_version = 2021.11.0-beta
version_pattern = YYYY.MM.INC0[-TAG]
commit_message = 
	Bump version to {new_version}
	[skip ci]
commit = True
tag = False
push = False

[bumpver:file_patterns]
setup.cfg = version = {version}
integreat_cms/__init__.py = __version__ = "{version}"
sphinx/conf.py = release = "{version}"

