[metadata]
name = integreat-cms
version = 2022.2.0-beta
author = Tür an Tür – Digitalfabrik gGmbH
author_email = tech@integreat-app.de
description = Content Management System for the Integreat App
url = https://integreat-app.de/en/
project_urls = 
	Funding=https://integreat-app.de/en/donation/
	Documentation=https://digitalfabrik.github.io/integreat-cms/
	Issues=https://github.com/digitalfabrik/integreat-cms/issues
	Source Code=https://github.com/digitalfabrik/integreat-cms
	Release Notes=https://digitalfabrik.github.io/integreat-cms/changelog.html
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE.txt
classifiers = 
	Development Status :: 4 - Beta
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: Django
	Framework :: Django :: 3.2
	Operating System :: POSIX :: Linux
	Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System
	Topic :: Internet :: WWW/HTTP :: WSGI :: Application
	Natural Language :: English
	Natural Language :: German
keywords = 
	integreat
	cms
	django
	e-government
	newcomers
	refugees
	multilingual

[options]
packages = find:
install_requires = 
	aiohttp
	argon2-cffi
	bcrypt
	cffi
	Django>=3.2,<4.0
	django-cacheops
	django-cors-headers
	django-debug-toolbar
	django-linkcheck
	django-polymorphic
	django-redis
	django-treebeard
	django-widget-tweaks
	django-webpack-loader
	feedparser
	idna
	lxml
	Pillow
	psycopg2-binary
	python-dateutil
	python-magic
	requests
	rules
	six
	webauthn
	xhtml2pdf
python_requires = >=3.8
include_package_data = True
scripts = integreat_cms/integreat-cms-cli

[bumpver]
current_version = 2022.2.0-beta
version_pattern = YYYY.MM.INC0[-TAG]
commit_message = 
	Bump version to {new_version}
	[skip ci]
commit = True
tag = False
push = False

[bumpver:file_patterns]
setup.cfg = version = {version}
integreat_cms/__init__.py = __version__ = "{version}"
sphinx/conf.py = release = "{version}"

